--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -38,8 +38,9 @@ class: left, top
 * data.table
 * ggplot2
 * DESeq2
+* knitr
 
-```{r, echo=FALSE, error=FALSE, message=FALSE, gache=FALSE}
+```{r, echo=FALSE, error=FALSE, message=FALSE, include=FALSE, cache=FALSE}
 library(dplyr)
 library(tidyverse)
 library(stringr)
@@ -47,6 +48,7 @@ require(DESeq2) #analysis itself
 library(data.table)
 library(ggplot2)
 library(gridExtra)
+library(knitr)
 
 
 mirna_hor=read.table("mirna_hor.txt", sep="\t", header=T)
@@ -101,12 +103,15 @@ mir_mir <- read.table("mir_mir_koos.tsv", head=T)
 mir_mir <- mir_mir[!(names(mir_mir) %in% c("baseMean", "log2FoldChange", "lfcSE", "stat", "pvalue", "padj"))]
 mir_mir <- setDT(mir_mir, keep.rownames = T)
 ```
+---
+
 ```{r, echo=FALSE}
 
 mir_mir <- read.table("mir_mir_koos.tsv", head=T)
 mir_mir <- mir_mir[!(names(mir_mir) %in% c("baseMean", "log2FoldChange", "lfcSE", "stat", "pvalue", "padj"))]
 mir_mir <- setDT(mir_mir, keep.rownames = T)
-print(mir_mir[1:5,1:5])
+library(knitr)
+knitr::kable(mir_mir[1:5,1:7], format = "html")
 
 
 ```
@@ -122,7 +127,7 @@ colSums(mir_mir < 0.00005)
 ---
 Arrenge by most interesting microRNA
 
-```{r, error=TRUE}
+```{r, error=TRUE, message=FALSE}
 
 mir_mir<-arrange(mir_mir, miR.003)
 
@@ -162,7 +167,7 @@ p9 <- mirna_hor %>% ggplot(aes(top_mirna, top10_10 	))+geom_point()+geom_smooth(
 
 ```
 
-```{r, echo=FALSE, error=TRUE, message=FALSE, fig.width=12, fig.height=8}
+```{r, echo=FALSE, error=TRUE, message=FALSE, fig.width=18, fig.height=12}
 
 grid.arrange(p1, p2, p3, p4, p5, p6, p7, p8, p9,ncol=3)
 
@@ -176,7 +181,7 @@ mir_gene <- read.table("mir_gene_koos.tsv", head=T, sep="\t")
 mir_gene=mir_gene[!(names(mir_gene) %in% c("baseMean", "log2FoldChange", "lfcSE", "stat", "pvalue", "padj"))]
 mir_gene <- setDT(mir_gene, keep.rownames = T)
 rn<-mir_gene$rn
-print(mir_gene[1:5,1:5])
+knitr::kable(mir_gene[1:5,1:7], format = "html")
 
 
 ```
@@ -186,13 +191,14 @@ How many microRNA and genes expression is correlated
 
 ```{r, error=TRUE}
 
+
 colSums(mir_gene < 0.005)
 
 ```
 ---
 Arrenge by most interesting microRNA
 
-```{r, error=TRUE}
+```{r, error=TRUE, message=FALSE}
 
 mir_gene<-arrange(mir_gene, miR.003)
 
@@ -258,8 +264,12 @@ mir_gene_pearson=mir_gene_pearson[!(names(mir_gene_pearson) %in% c("X.1.", "miR.
 mir_gene_pearson <- setDT(mir_gene_pearson, keep.rownames = T)
 mir_gene_pearson$rn <- rn
 
-head(mir_gene_pearson[1:5,1:5])
+```
 
+
+```{r, echo=FALSE, error=TRUE, message=FALSE,}
+
+knitr::kable(mir_gene_pearson[1:5,1:7], format = "html")
 
 ```
 
@@ -278,7 +288,7 @@ Arrenge by most interesting microRNA
 
 mir_gene_pearson<-arrange(mir_gene_pearson, miR.003)
 
-mir_gene_pearson[1:10,1:4]
+knitr::kable(mir_gene_pearson[1:10,1:4], format = "html")
 
 ```
 
